actualizacion de prueva

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "eqiposDbConnection": " Data Sourse = LOCALHOST; inital Catalog = equipos; User id = miUsuario; Password = 12345 "
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
