--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eqiposDbConnection": " Data Sourse = LOCALHOST; inital Catalog = equipos; User id = miUsuario; Password = 12345 "
+    "eqiposDbConnection": " Data Sourse = LOCALHOST; inital Catalog = equipos; User id = miUsuario; Password = 12345; Connect Timeout = 120; Encrypt= false "
   },
 
 
